test/types/void/redefine-nothing.good
redefine-nothing.chpl:2: error: attempt to redefine reserved type 'nothing'
