test/types/void/redefine-nothing.chpl
enum E {
  nothing = 0,
  yes = 1
}

writeln(E.yes);
